Support pose calculation when only 4 vertices available